# heisencoder.github.io

./: .gitignore  .gitmodules  CNAME  README.md  astro.config.mjs  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy.yml
heisenmicr/: .gitignore  HeisenMICR.md  README.md  build.py  conftest.py  preview.py  pyproject.toml  spec.py  specimen.py  test.py
heisenmicr/tests/: test_font.py
public/: CNAME  robots.txt
scripts/: check-external-links.mjs
src/: consts.ts  content.config.ts
src/components/: Footer.astro  Nav.astro  PageHeader.astro
src/content/blog/: building-this-site.md  hello-world.md
src/layouts/: Layout.astro
src/pages/: 404.astro  index.astro
src/pages/blog/: [...slug].astro  index.astro
src/styles/: global.css
tests/: a11y.spec.ts  cls.spec.ts  links.spec.ts  site.spec.ts
